<resources>
    <string name="app_name">MyMovies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">Series</string>
    <string name="tab_text_3">My List</string>
    <string name="movie_fragment">ini movie fragment</string>
    <string name="mylist_fragment">ini mylist fragment</string>
    <string name="tvseries_fragment">ini tvseries fragment</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="movies">Movies</string>
    <string name="title">Title</string>
...
