...
        android:text="@string/upcoming_movies"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming_film"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:background="#FAFAFA"
        tools:listitem="@layout/item_row_upcoming_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_film"/>
...
        android:text="@string/popular_movies"
        app:layout_constraintTop_toBottomOf="@id/rv_upcoming_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_film"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#FAFAFA"
        tools:listitem="@layout/item_row_popular_film"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_popular_film"/>
...
